@@ -4,20 +4,15 @@ import lombok.Setter;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import uk.gov.hmcts.reform.judicialbooking.data.BookingEntity;
-import uk.gov.hmcts.reform.judicialbooking.domain.model.Appointment;
-import uk.gov.hmcts.reform.judicialbooking.domain.model.Authorisation;
 import uk.gov.hmcts.reform.judicialbooking.domain.model.BookingRequest;
 import uk.gov.hmcts.reform.judicialbooking.domain.model.BookingResponse;
-import uk.gov.hmcts.reform.judicialbooking.domain.model.JudicialUserProfile;
-import uk.gov.hmcts.reform.judicialbooking.domain.model.OrmBooking;
 import uk.gov.hmcts.reform.judicialbooking.domain.model.OrmBookingAssignmentsRequest;
-import uk.gov.hmcts.reform.judicialbooking.domain.model.OrmBookingRequest;
+import uk.gov.hmcts.reform.judicialbooking.domain.model.OrmUserRequest;
 import uk.gov.hmcts.reform.judicialbooking.domain.model.enums.Status;
 
 import java.time.ZonedDateTime;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
 
 @Setter
 public class TestDataBuilder {
@@ -42,7 +37,6 @@ public class TestDataBuilder {
 
     public static BookingEntity buildBooking() {
         return BookingEntity.builder()
-                .appointmentId("appointmentId_1")
                 .beginTime(ZonedDateTime.now().plusDays(1))
                 .endTime(ZonedDateTime.now().plusMonths(1))
                 .build();
@@ -50,7 +44,6 @@ public class TestDataBuilder {
 
     public static BookingEntity buildParsedBooking() {
         return BookingEntity.builder()
-                .appointmentId("appointmentId_1")
                 .userId("5629957f-4dcd-40b8-a0b2-e64ff5898b28")
                 .created(ZonedDateTime.now())
                 .beginTime(ZonedDateTime.now().plusDays(1))
@@ -60,11 +53,8 @@ public class TestDataBuilder {
 
     public static BookingEntity buildPreparedBooking() {
         return BookingEntity.builder()
-                .appointmentId("appointmentId_1")
-                .baseLocationId("baseLocationId")
-                .contractTypeId("contractTypeId")
+                .locationId("baseLocationId")
                 .regionId("regionId")
-                .roleId("roleId")
                 .userId("5629957f-4dcd-40b8-a0b2-e64ff5898b28")
                 .created(ZonedDateTime.now())
                 .beginTime(ZonedDateTime.now().plusDays(1))
@@ -73,66 +63,18 @@ public class TestDataBuilder {
                 .build();
     }
 
-    public static JudicialUserProfile buildJudicialProfile() {
-        return JudicialUserProfile.builder()
-                .fullName("Keith Gill")
-                .emailId("Keith.Gill@robinhood.com")
-                .contractTypeId("contractTypeId")
-                .idamId("idamId")
-                .knowAs("Geohot")
-                .personalCode("PS32010")
-                .authorisations(List.of(
-                        Authorisation.builder().authorisationId("authId_1").build(),
-                        Authorisation.builder().authorisationId("authId_2").build(),
-                        Authorisation.builder().authorisationId("authId_3").build()
-                )).appointments(List.of(
-                        Appointment.builder()
-                                .appointmentId("appointmentId_1")
-                                .baseLocationId("baseLocationId_1")
-                                .roleId("roleId_1")
-                                .regionId("regionId_1")
-                                .contractTypeId("contractTypeId_1")
-                                .build(),
-                        Appointment.builder()
-                                .appointmentId("appointmentId_2")
-                                .baseLocationId("baseLocationId_2")
-                                .roleId("roleId_2")
-                                .regionId("regionId_2")
-                                .contractTypeId("contractTypeId_2")
-                                .build()
-                ))
-                .build();
-    }
 
-    public static OrmBooking buildOrmBooking(BookingEntity booking) {
-        booking.setId(UUID.fromString(uuidString));
-        return OrmBooking.builder()
-                .bookingId(booking.getId().toString())
-                .appointmentId(booking.getAppointmentId())
-                .baseLocationId(booking.getBaseLocationId())
-                .contractTypeId(booking.getContractTypeId())
-                .regionId(booking.getRegionId())
-                .roleId(booking.getRoleId())
-                .beginTime(booking.getBeginTime())
-                .endTime(booking.getEndTime())
-                .created(booking.getCreated())
-                .build();
-    }
-
-    public static OrmBookingRequest buildOrmBookingRequest() {
-        return OrmBookingRequest.builder()
-                .actorId(uuidString)
-                .authorisationIds(
-                        List.of("authId")
-                )
+    public static OrmUserRequest buildOrmBookingRequest() {
+        return OrmUserRequest.builder()
+                .actorIds(Arrays.asList(uuidString))
                 .build();
 
     }
 
     public static OrmBookingAssignmentsRequest buildOrmBookingAssignmentsRequest() {
         return OrmBookingAssignmentsRequest.builder()
-                .bookings(Collections.singletonList(buildOrmBooking(buildPreparedBooking())))
-                .bookingRequest(buildOrmBookingRequest())
+                .bookings(Collections.singletonList(buildPreparedBooking()))
+                .userRequest(buildOrmBookingRequest())
                 .build();
     }
 
